Comparison added. It's not centered, so that's probably going to be an issue.

--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ ul {
     font-size: 72px;
   }
 
+  .center {
+    float: center;
+    text-align: center;
+  }
+
   .grid-container {
     display: grid;
     column-gap: 20px;
@@ -83,3 +88,42 @@ ul {
     color: inherit;
     text-decoration: inherit;
   }
+
+  * {box-sizing: border-box;}
+
+.img-comp-container {
+  position: relative;
+  height: 200px; /*should be the same height as the images*/
+}
+
+.img-comp-img {
+  position: absolute;
+  width: auto;
+  height: auto;
+  overflow: hidden;
+}
+
+.img-comp-img img {
+  display: block;
+  vertical-align: middle;
+}
+
+.img-comp-slider {
+  position: absolute;
+  z-index: 9;
+  cursor: ew-resize;
+  /*set the appearance of the slider:*/
+  width: 40px;
+  height: 40px;
+  background-color: #2196F3;
+  opacity: 0.7;
+  border-radius: 50%;
+}
+
+.blockcenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  float: center;
+}
